--- a/ArgentBank-website-main/FRONTEND/argent-bank/package.json
+++ b/ArgentBank-website-main/FRONTEND/argent-bank/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.66.1",
     "web-vitals": "^2.1.4"
